<resources>
    <string name="app_name">WeatherApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="invalid_lat_long_used">Invalid lattitude and longitude.</string>
    <string name="service_not_available">Service Unavailable.</string>
    <string name="no_address_found">No address found.</string>
    <string name="address_found">Address found!</string>
    <string name="feels_like">Feels like</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="humidity">Humidity</string>
    <string name="uv_index">UV Index</string>
    <string name="weather_icon">Weather icon</string>
    <string name="chance_of_precipitation">Chance of Precipitation:</string>
    <string name="hi">Hi</string>
    <string name="low">Low</string>
    <string name="fetch_other_location">Fetch other location..</string>
    <string name="switch_locations">Switch Locations</string>
    <string name="places_api_key">AIzaSyAJOXlfwb80iKOyrMbhE4MYo7yiMzKHa7Q</string>
</resources>
