<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="itemWeather"
            type="com.example.android.weatherapp.model.DataItem" />
        <variable name="itemType"
            type="String" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.CurrentFragment"
        android:focusable="true"
        android:clickable="true"
        android:padding="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="12pt"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@{itemWeather.formatDate(itemWeather.time, itemType)}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/ItemSummary"
            android:id="@+id/itemTime"/>

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:maxHeight="20dp"
            android:maxWidth="20dp"
            android:id="@+id/iconItem"
            app:layout_constraintTop_toBottomOf="@id/itemTime"
            app:layout_constraintBottom_toTopOf="@id/itemTemperature"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guidedi"
            android:contentDescription="@string/weather_icon"
            android:layout_marginBottom="10dp"
            android:scaleType="fitXY"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:textStyle="italic"
            android:text="@{itemWeather.summary}"
            app:layout_constraintTop_toBottomOf="@id/itemTime"
            app:layout_constraintBottom_toTopOf="@id/itemTemperature"
            app:layout_constraintStart_toEndOf="@+id/guidedi"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/ItemSummary"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/itemTemperature"
            app:layout_constraintTop_toBottomOf="@id/ItemSummary"
            app:layout_constraintBottom_toTopOf="@id/itemApparent"
            android:text="@{Double.toString(itemWeather.temperature)}"
            />

        <TextView
            android:id="@+id/itemApparentLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/feels_like"
            app:layout_constraintBottom_toTopOf="@id/itemWindSpeed"
            app:layout_constraintEnd_toStartOf="@id/itemApparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemTemperature" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/itemApparent"
            app:layout_constraintTop_toBottomOf="@id/itemTemperature"
            app:layout_constraintBottom_toTopOf="@id/itemWindSpeed"
            app:layout_constraintStart_toEndOf="@id/itemApparentLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{Double.toString(itemWeather.apparentTemperature)}"
            android:gravity="end"/>
        <TextView
            android:id="@+id/itemwindSpeedLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/itemHumidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/itemWindSpeed"
            app:layout_constraintTop_toBottomOf="@+id/itemApparentLabel"
            android:text="@string/wind_speed"/>
        <TextView
            android:id="@+id/itemWindSpeed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@{Double.toString(itemWeather.windSpeed)}"
            app:layout_constraintBottom_toTopOf="@id/itemHumidity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemwindSpeedLabel"
            app:layout_constraintTop_toBottomOf="@id/itemApparent"
            android:gravity="end"/>
        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/itemHumidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/itemWindSpeed"
            app:layout_constraintTop_toBottomOf="@+id/itemApparentLabel"
            android:text="@string/wind_speed"/>
        <TextView
            android:id="@+id/itemHumidityLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/humidity"
            app:layout_constraintBottom_toTopOf="@id/itemUVIndex"
            app:layout_constraintEnd_toStartOf="@id/itemHumidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/itemWindSpeed"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/itemHumidity"
            app:layout_constraintTop_toBottomOf="@id/itemWindSpeed"
            app:layout_constraintBottom_toTopOf="@id/itemUVIndex"
            app:layout_constraintStart_toEndOf="@id/itemHumidityLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{Double.toString(itemWeather.humidity)}"
            android:gravity="end"/>
        <TextView
            android:id="@+id/itemUvIndexLabel"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/uv_index"
            app:layout_constraintTop_toBottomOf="@id/itemHumidity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/itemUVIndex"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/itemUVIndex"
            app:layout_constraintTop_toBottomOf="@id/itemHumidity"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/itemUvIndexLabel"
            android:text="@{Integer.toString(itemWeather.uvIndex)}"
            android:gravity="end"/>
        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent=".4"
            android:orientation="vertical"
            android:id="@+id/guidedi"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>